# multi-bot-agentic

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DAILY_IMPROVEMENTS.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  EXAMPLES.md  PERFORMANCE.md  PULL_SHARK_LOG.md  QUICKSTART.md  SAFETY.md  TROUBLESHOOTING.md
docs/adr/: ADR-005-async-task-queue.md  ADR-008-async-task-queue.md  ADR-035-structured-logging.md  ADR-083-config-management.md  ADR-093-database-ORM.md  ADR-094-config-management.md
docs/demo/: README.md
docs/releases/: v0.2.8.md  v0.3.19.md  v0.4.24.md  v0.5.21.md  v0.5.26.md  v0.6.8.md  v0.7.6.md  v0.7.9.md  v0.9.7.md
docs/use-cases/: ISSUE-001-non-deterministic-agent-loops-hard-to-de.md  ISSUE-002-long-running-tasks-need-cancellation.md  ISSUE-003-tool-failures-should-not-crash-the-run.md  ISSUE-004-invalid-step-budgets-should-fail-fast.md  README.md
migrations/: 001_initial_event_log.sql
scripts/: benchmark.py  check.sh  health_check.py  render_demo_gif.py  run_demo.sh  verify_portfolio.sh
src/multi_bot_agentic/: __init__.py  cli.py  config.py  models.py  (+5 more)
tests/: __init__.py  test_adapters.py  test_cli.py  test_config.py  test_decision.py  test_event_log.py  test_lifecycle.py  test_portfolio_agentic_contract.py  test_portfolio_llm_providers.py  test_portfolio_safety_controls.py  test_runner.py  test_safety.py  test_tools.py
(+13 files in other folders)
