[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-bot-agentic"
version = "0.1.0"
description = "Deterministic multi-provider AI-agent orchestrator with Observe-Decide-Act loops."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Chris Liu" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.19",
  "pytest>=9.0",
  "ruff>=0.14"
]

[project.scripts]
multi-bot-agentic = "multi_bot_agentic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
